--- a/package.json
+++ b/package.json
@@ -1,47 +1,50 @@
 {
-  "name": "cloudtesttask",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test": "vitest"
-  },
-  "dependencies": {
-    "@hookform/error-message": "^2.0.1",
-    "@hookform/resolvers": "^3.1.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/react-text-mask": "^5.4.12",
-    "classnames": "^2.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.3",
-    "react-redux": "^8.0.7",
-    "react-router-dom": "^6.12.0",
-    "react-select": "^5.7.3",
-    "react-text-mask": "^5.5.0",
-    "redux": "^4.2.1",
-    "yup": "^1.2.0"
-  },
-  "devDependencies": {
-    "@testing-library/dom": "^9.3.3",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "jsdom": "^22.1.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9",
-    "vitest": "^0.34.6"
-  }
+    "name": "cloudtesttask",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
+        "test": "vitest"
+    },
+    "dependencies": {
+        "@hookform/error-message": "^2.0.1",
+        "@hookform/resolvers": "^3.1.0",
+        "@reduxjs/toolkit": "^1.9.5",
+        "@types/react-text-mask": "^5.4.12",
+        "classnames": "^2.3.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.44.3",
+        "react-redux": "^8.0.7",
+        "react-router-dom": "^6.12.0",
+        "react-select": "^5.7.3",
+        "react-text-mask": "^5.5.0",
+        "redux": "^4.2.1",
+        "yup": "^1.2.0"
+    },
+    "devDependencies": {
+        "@testing-library/dom": "^9.3.3",
+        "@testing-library/jest-dom": "^6.1.3",
+        "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.5.1",
+        "@types/react": "^18.0.37",
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.59.0",
+        "@typescript-eslint/parser": "^5.62.0",
+        "@vitejs/plugin-react": "^4.0.3",
+        "eslint": "^8.38.0",
+        "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.3.4",
+        "jsdom": "^22.1.0",
+        "typescript": "^5.0.2",
+        "vite": "^4.3.9",
+        "vite-tsconfig-paths": "^4.2.3",
+        "vitest": "^0.34.6"
+    }
 }
