--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "@hookform/error-message": "^2.0.1",
         "@hookform/resolvers": "^3.1.0",
         "@reduxjs/toolkit": "^1.9.5",
-        "@types/react-text-mask": "^5.4.12",
         "classnames": "^2.3.2",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.44.3",
@@ -36,6 +36,8 @@
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.62.0",
         "@vitejs/plugin-react": "^4.0.3",
+        "@types/lodash": "^4.14.202",
+        "@types/react-text-mask": "^5.4.12",
         "eslint": "^8.38.0",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.29.1",
@@ -44,6 +46,7 @@
         "jsdom": "^22.1.0",
         "typescript": "^5.0.2",
         "vite": "^4.3.9",
+        "vite-plugin-svgr": "^4.2.0",
         "vite-tsconfig-paths": "^4.2.3",
         "vitest": "^0.34.6"
     }
