--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@reduxjs/toolkit": "^1.9.5",
         "classnames": "^2.3.2",
         "lodash": "^4.17.21",
+        "prettier": "^3.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.44.3",
@@ -31,18 +32,20 @@
         "@testing-library/jest-dom": "^6.1.3",
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.5.1",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "eslint-plugin-react-refresh": "^0.4.3",
+        "@types/lodash": "^4.14.202",
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
+        "@types/react-text-mask": "^5.4.12",
         "@typescript-eslint/eslint-plugin": "^5.59.0",
         "@typescript-eslint/parser": "^5.62.0",
         "@vitejs/plugin-react": "^4.0.3",
-        "@types/lodash": "^4.14.202",
-        "@types/react-text-mask": "^5.4.12",
         "eslint": "^8.38.0",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.3.4",
         "jsdom": "^22.1.0",
         "typescript": "^5.0.2",
         "vite": "^4.3.9",
